package app.persistence;

import app.entities.*;

import java.util.List;
import java.util.ArrayList;

public class OrderMapper {

    public static List<Order> getUserOrders(int userId)
    {
        return null;
    }

    public static boolean addUserOrder(int userId, int topId, int botId)
    {
        return false;
    }

    public static List<Topping> getToppings()
    {
        return null;
    }

    public static List<Bottom> getBottoms()
    {
        return null;
    }
}
