-- This script was generated by the ERD tool in pgAdmin 4.
-- Please log an issue at https://github.com/pgadmin-org/pgadmin4/issues/new/choose if you find any bugs, including reproduction steps.
BEGIN;


CREATE TABLE IF NOT EXISTS public.users
(
    id serial NOT NULL,
    email character varying NOT NULL,
    password bytea NOT NULL,
    salt bytea NOT NULL,
    admin boolean NOT NULL,
    balance double precision NOT NULL,
    PRIMARY KEY (id)
    );

CREATE TABLE IF NOT EXISTS public.toppings
(
    id serial NOT NULL,
    name character varying NOT NULL,
    price double precision NOT NULL,
    PRIMARY KEY (id)
    );

CREATE TABLE IF NOT EXISTS public.orders
(
    id serial NOT NULL,
    user_id integer NOT NULL,
    top_id integer NOT NULL,
    bot_id integer NOT NULL,
    price double precision NOT NULL,
    PRIMARY KEY (id)
    );

CREATE TABLE IF NOT EXISTS public.bottoms
(
    id serial NOT NULL,
    name character varying NOT NULL,
    price double precision NOT NULL,
    PRIMARY KEY (id)
    );

ALTER TABLE IF EXISTS public.orders
    ADD CONSTRAINT user_id FOREIGN KEY (user_id)
    REFERENCES public.users (id) MATCH SIMPLE
    ON UPDATE NO ACTION
       ON DELETE NO ACTION
    NOT VALID;


ALTER TABLE IF EXISTS public.orders
    ADD CONSTRAINT top_id FOREIGN KEY (top_id)
    REFERENCES public.toppings (id) MATCH SIMPLE
    ON UPDATE NO ACTION
       ON DELETE NO ACTION
    NOT VALID;


ALTER TABLE IF EXISTS public.orders
    ADD CONSTRAINT bot_id FOREIGN KEY (bot_id)
    REFERENCES public.bottoms (id) MATCH SIMPLE
    ON UPDATE NO ACTION
       ON DELETE NO ACTION
    NOT VALID;

END;